@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/Attic/mysql-4.1.13-r1.ebuild,v 1.8 2005/09/12 16:05:45 vivo Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/Attic/mysql-4.1.13-r1.ebuild,v 1.9 2005/09/16 08:34:02 vivo Exp $
 
 inherit eutils gnuconfig flag-o-matic versionator
 
@@ -167,7 +167,7 @@ src_unpack() {
 
 	if ! useq extraengine ; then
 		einfo "disabling unneded extraengine tests"
-		local disable_test="archive bdb blackhole federated view"
+		local disable_test="archive bdb blackhole federated view csv"
 		for i in $disable_test ; do
 			mv "${S}/mysql-test/t/${i}.test" "${S}/mysql-test/t/${i}.disabled" \
 			&> /dev/null
